<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/plomo"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/svCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"

                android:text="@string/ficha_registro"
                android:textColor="@color/negro"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtRazonSocial"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/razon_social"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txtDireccionFiscal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/direccion_fiscal"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txtDireccionDespacho"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/direccion_despacho"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txtRuc"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/nro_ruc"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txtCelular"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/celular"
                android:inputType="phone"

                android:singleLine="true" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"

                android:singleLine="true" />

            <EditText
                android:id="@+id/txtDNI"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/dni"
                android:inputType="number"
                android:maxLength="8"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txtGiroNegocio"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/giro_negocio"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txtRepresentaLegal"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/representante_legal"
                android:inputType="textCapSentences"
                android:singleLine="true" />

            <EditText
                android:id="@+id/txtContacto"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/editext_estilo"
                android:hint="@string/contacto"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>