<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    tools:context="fragment.LoginFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/name_company"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/editext_estilo"
            android:hint="@string/usuario"
            android:padding="15dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/editext_estilo"
            android:hint="@string/contrasena"
            android:inputType="numberPassword"
            android:padding="15dp"
            android:singleLine="true" />
    </LinearLayout>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/azul"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ingresar"
        android:textColor="@color/blanco"
        android:textSize="17sp">

    </Button>

    <CheckBox
        android:id="@+id/cbxRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:checked="false"
        android:text="Recordar"
        android:textColor="@color/plomo_oscuro" />

</RelativeLayout>
