<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/plomo"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnFiltrarDeuda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/blanco"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/filtrar_deuda"
            android:textColor="@color/negro"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnBusquedaAvanzada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/blanco"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/busqueda_avanzada"
            android:textColor="@color/negro"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnEscogerRuta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/blanco"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/escoger_ruta"
            android:textColor="@color/negro"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
